; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_func.c_test_agg_errmsg16_final.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_func.c_test_agg_errmsg16_final.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SQLITE_TRANSIENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @test_agg_errmsg16_final to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_agg_errmsg16_final(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32* @sqlite3_context_db_handle(i32* %5)
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @sqlite3_aggregate_context(i32* %7, i32 2048)
  %9 = load i32*, i32** %4, align 8
  %10 = call i8* @sqlite3_errmsg16(i32* %9)
  store i8* %10, i8** %3, align 8
  %11 = load i32*, i32** %2, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = load i32, i32* @SQLITE_TRANSIENT, align 4
  %14 = call i32 @sqlite3_result_text16(i32* %11, i8* %12, i32 -1, i32 %13)
  ret void
}

declare dso_local i32* @sqlite3_context_db_handle(i32*) #1

declare dso_local i32 @sqlite3_aggregate_context(i32*, i32) #1

declare dso_local i8* @sqlite3_errmsg16(i32*) #1

declare dso_local i32 @sqlite3_result_text16(i32*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
